fix: restore index.html and use classic navigation header v6.8.5

--- a/public/create-request.html
+++ b/public/create-request.html
@@ -99,21 +99,18 @@
     <link rel="stylesheet" href="css/navigation.css?v=6.8.3">
 </head>
 <body class="with-nav">
-                <div class="nav-header">
-        <div style="display: flex; gap: 12px; pointer-events: auto;">
-            <button class="nav-btn" onclick="window.history.back()" aria-label="Назад">
-                <span></span>
-            </button>
-            <button class="nav-btn" onclick="window.history.forward()" aria-label="Вперед">
-                <span></span>
-            </button>
-        </div>
+                    <div class="app-header">
+        <button class="back-btn" onclick="window.location.href='index.html'">
+            <span></span> На главную
+        </button>
+        <div class="header-title">$title</div>
+    </div>
         <button class="nav-btn nav-home" onclick="window.location.href='index.html'" aria-label="На главную">
             <span></span>
         </button>
     </div>
     <div class="container">
-        <h1> Новая заявка</h1>
+        
 
         <label for="description">Описание проблемы</label>
         <textarea id="description" placeholder="Опишите проблему подробно..."></textarea>
@@ -163,6 +160,7 @@
     </script>
 <script src="js/logger.js?v=6.8.3"></script></body>
 </html>
+
 
 
 
