--- a/public/payments.html
+++ b/public/payments.html
@@ -39,20 +39,17 @@
     <link rel="stylesheet" href="css/navigation.css?v=6.8.3">
 </head>
 <body class="with-nav">
-                <div class="nav-header">
-        <div style="display: flex; gap: 12px; pointer-events: auto;">
-            <button class="nav-btn" onclick="window.history.back()" aria-label="Назад">
-                <span></span>
-            </button>
-            <button class="nav-btn" onclick="window.history.forward()" aria-label="Вперед">
-                <span></span>
-            </button>
-        </div>
+                    <div class="app-header">
+        <button class="back-btn" onclick="window.location.href='index.html'">
+            <span></span> На главную
+        </button>
+        <div class="header-title">$title</div>
+    </div>
         <button class="nav-btn nav-home" onclick="window.location.href='index.html'" aria-label="На главную">
             <span></span>
         </button>
     </div>
-    <h1> Мои платежи</h1>
+    
     
     <div class="debt-card">
         <div class="period">Задолженность за Октябрь 2023</div>
@@ -88,6 +85,7 @@
     <div class="version">v6.8.2</div>
 <script src="js/logger.js?v=6.8.3"></script></body>
 </html>
+
 
 
 
