--- a/public/404.html
+++ b/public/404.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=/">
-    <title>Перенаправление...</title>
+    <title>РџРµСЂРµРЅР°РїСЂР°РІР»РµРЅРёРµ...</title>
 </head>
 <body>
     <script>window.location.href = "/";</script>
 </body>
 </html>
+
 
