--- a/public/meters.html
+++ b/public/meters.html
@@ -2,15 +2,23 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="48x48" href="./icon-48x48.png?v=6.8.2">
+    <link rel="icon" type="image/png" sizes="192x192" href="./icon-192x192.png?v=6.8.2">
+    <link rel="apple-touch-icon" sizes="180x180" href="./icon-180x180.png?v=6.8.2">
+    <meta name="theme-color" content="#4CAF50">
+    <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Счётчики - УК Зелёная долина v6.8.2</title>
+    <link rel="stylesheet" href="./css/design-system.css">
+    <link rel="stylesheet" href="./css/components.css">
+    <link rel="stylesheet" href="./css/mobile.css">
+    <title>Счётчики - УК Зелёная долина v6.8.3</title>
     <link rel="stylesheet" href="css/navigation.css?v=6.8.3">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { 
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; 
             background: #f5f5f5; 
-            padding-top: 80px; /* ФИКСИРОВАННЫЙ ОТСТУП */
+            padding-top: 96px; /* ФИКСИРОВАННЫЙ ОТСТУП */
             padding-bottom: 20px;
             padding-left: 20px;
             padding-right: 20px;
@@ -38,16 +46,15 @@
     </style>
 </head>
 <body>
-    <!-- Навигация -->
-                <div class="app-header">
-        <button class="back-btn" onclick="window.location.href='index.html'">
-            <span></span> На главную
-        </button>
-        <div class="header-title">$title</div>
-    </div>
-        <button class="nav-btn nav-home" onclick="window.location.href='index.html'" aria-label="На главную">
-            <span></span>
-        </button>
+    <div class="page-header" style="position: fixed; top: 0; left: 0; right: 0; display: flex; align-items: center; gap: 12px; padding: 14px 16px; background: linear-gradient(135deg, #4CAF50 0%, #2E7D32 100%); color: #fff; box-shadow: 0 4px 12px rgba(0,0,0,0.12); z-index: 10;">
+        <button class="back-btn" onclick="window.location.href='index.html'" style="width:44px;height:44px;border:none;border-radius:12px;background:rgba(255,255,255,0.18);color:#fff;font-size:22px;cursor:pointer;display:inline-flex;align-items:center;justify-content:center;transition:transform 0.15s ease,box-shadow 0.15s ease,background 0.15s ease;" aria-label="Назад">←</button>
+        <div style="display:flex;align-items:center;gap:12px;">
+            <img src="icon-192x192.svg?v=6.8.3" alt="УК Зелёная долина" style="width:44px;height:44px;border-radius:12px;object-fit:cover;background:#fff;padding:4px;box-shadow:0 3px 10px rgba(0,0,0,0.15);">
+            <div style="display:flex;flex-direction:column;gap:2px;">
+                <div style="font-size:16px;font-weight:700;color:#fff;">Зелёная долина</div>
+                <div style="font-size:13px;opacity:0.9;color:#e8f8f5;">Показания счётчиков</div>
+            </div>
+        </div>
     </div>
 
     
