--- a/public/404.html
+++ b/public/404.html
@@ -2,6 +2,15 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="48x48" href="./icon-48x48.png?v=6.8.3">
+    <link rel="icon" type="image/png" sizes="192x192" href="./icon-192x192.png?v=6.8.3">
+    <link rel="apple-touch-icon" sizes="180x180" href="./icon-180x180.png?v=6.8.3">
+    <meta name="theme-color" content="#2ecc71">
+    <link rel="manifest" href="manifest.json">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/design-system.css">
+    <link rel="stylesheet" href="./css/components.css">
+    <link rel="stylesheet" href="./css/mobile.css">
     <meta http-equiv="refresh" content="0;url=/">
     <title>Перенаправление...</title>
 </head>
