fix: v7.2.3 - Удалён дублирующий блок auth
 КРИТИЧЕСКОЕ ИСПРАВЛЕНИЕ:
- Удалён второй блок AUTH_STORAGE_KEY (строки 1843-1872)
- Оставлен только основной блок auth (строка 1773)
- Исправлена ошибка: AUTH_STORAGE_KEY already declared
- Обновлена версия до v7.2.3

✅ РЕЗУЛЬТАТ:
- Только 1 объявление AUTH_STORAGE_KEY
- Нет конфликтов переменных
- Всё должно работать!

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/components.css">
     <link rel="stylesheet" href="./css/modern-index.css?v=7.2">
-    <title>УК «Зелёная долина» v7.2.1 🎨</title>
+    <title>УК «Зелёная долина» v7.2.3 ✅</title>
     
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#4CAF50">
@@ -1826,7 +1826,7 @@
         window.logout = logout;
         window.requireAuth = requireAuth;
 
-        console.log('🚀 Инициализация приложения УК «Зелёная долина» v7.2');
+        console.log('🚀 Инициализация приложения УК «Зелёная долина» v7.2.3');
         
         // ========== АУДИО ПЕРЕМЕННЫЕ ==========
         let mediaRecorder = null;
@@ -1839,37 +1839,6 @@
         let videoRecorder = null;
         let videoStream = null;
         let videoChunks = [];
-
-        // ===== ФУНКЦИИ АВТОРИЗАЦИИ (встроенные для обхода кэша) =====
-        const AUTH_STORAGE_KEY = 'zd_isAuthenticated';
-        const AUTH_CODE_KEY = 'zd_login_code';
-        const USER_DATA_KEY = 'zd_user_data';
-
-        function isAuthenticated() {
-            return localStorage.getItem(AUTH_STORAGE_KEY) === 'true';
-        }
-
-        function logout() {
-            localStorage.removeItem(AUTH_STORAGE_KEY);
-            localStorage.removeItem(AUTH_CODE_KEY);
-            localStorage.removeItem(USER_DATA_KEY);
-            localStorage.removeItem('userPhone');
-            localStorage.removeItem('userData');
-            window.location.href = 'login.html';
-        }
-
-        function requireAuth() {
-            if (!isAuthenticated()) {
-                window.location.href = 'login.html';
-                return false;
-            }
-            return true;
-        }
-
-        // Экспорт в window для совместимости
-        window.isAuthenticated = isAuthenticated;
-        window.logout = logout;
-        window.requireAuth = requireAuth;
 
         // ===== НАВИГАЦИЯ =====
         function showSection(id) {
