fix: v7.2.3 - Восстановлена страница входа + параметр logout
🔧 ИСПРАВЛЕНО:
- login.html обновлён до v7.2.3
- Добавлен параметр ?logout=true для выхода
- Функция logout теперь перенаправляет на login.html?logout=true
- Исправлен автоматический редирект с login.html

 ТЕПЕРЬ РАБОТАЕТ:
- Кнопка 'Выйти' правильно выводит из аккаунта
- Можно войти заново после выхода
- Страница login.html доступна через ?logout=true

 ДЛЯ ВЫХОДА:
- Нажмите 'Выйти' на главной
- Или откройте: login.html?logout=true

--- a/public/index.html
+++ b/public/index.html
@@ -1798,7 +1798,10 @@
             localStorage.removeItem(AUTH_STORAGE_KEY);
             localStorage.removeItem(AUTH_CODE_KEY);
             localStorage.removeItem(USER_DATA_KEY);
-            window.location.href = 'login.html';
+            localStorage.removeItem('userPhone');
+            localStorage.removeItem('userData');
+            console.log('🚪 Выход...');
+            window.location.href = 'login.html?logout=true';
         }
 
         function requireAuth() {
