--- a/public/login.html
+++ b/public/login.html
@@ -28,7 +28,7 @@
         
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
-            background: linear-gradient(135deg, #E8F5E9 0%, #C8E6C9 50%, var(--brand-green) 100%);
+            background: linear-gradient(135deg, #4CAF50 0%, #66BB6A 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
