fix: Remove duplicate functions and unify localStorage keys
- Removed duplicate deletePhoto (kept full version with console.log)
- Removed duplicate submitRequest (kept version that saves to storage)
- Removed duplicate updateModernUI (kept later version)
- Unified localStorage keys: userData instead of user_data/zd_user_data
- Fixed cameras.html encoding (UTF-8, no BOM)

--- a/public/cameras.html
+++ b/public/cameras.html
@@ -48,7 +48,7 @@
         }
         .version { position: fixed; bottom: 16px; right: 16px; font-size: 12px; opacity: 0.5; color: #666; }
     </style>
-    <link rel="stylesheet" href="css/navigation.css?v=6.8.3">
+    <link rel="stylesheet" href="./css/navigation.css?v=6.8.3">
 </head>
 <body class="with-nav">
     <div class="page-header" style="position: fixed; top: 0; left: 0; right: 0; display: flex; align-items: center; gap: 12px; padding: 14px 16px; background: linear-gradient(135deg, #4CAF50 0%, #2E7D32 100%); color: #fff; box-shadow: 0 4px 12px rgba(0,0,0,0.12); z-index: 10;">
@@ -110,15 +110,10 @@
     </div>
 
     
-    <div class="version">v6.8.2</div>
-<script src="js/logger.js?v=6.8.3"></script></body>
+    <div class="version">v6.8.3</div>
+<script src="js/logger.js?v=6.8.3"></script>
+</body>
 </html>
-
-
-
-
-
-
 
 
 
