--- a/index.html
+++ b/index.html
@@ -5,12 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>УК «Зелёная долина» v7.2.6</title>
     <style>
-        body { font-family: Arial, sans-serif; padding: 20px; background: #f5f5f5; }
-        .container { max-width: 800px; margin: 0 auto; background: white; padding: 30px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-        h1 { color: #2e7d32; }
-        .btn { padding: 10px 20px; margin: 10px; border: none; background: #4CAF50; color: white; cursor: pointer; border-radius: 5px; }
-        .btn:hover { background: #388e3c; }
-        input { padding: 10px; width: 200px; margin: 10px 0; }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { 
+            font-family: Arial, sans-serif; 
+            padding: 20px; 
+            background: #f5f5f5;
+            -webkit-font-smoothing: antialiased;
+            overflow-x: hidden;
+        }
+        .container { 
+            max-width: 800px; 
+            margin: 20px auto; 
+            background: white; 
+            padding: 30px; 
+            border-radius: 10px; 
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            position: relative;
+        }
+        h1 { 
+            color: #2e7d32; 
+            margin-bottom: 20px;
+            font-size: 28px;
+        }
+        .btn { 
+            padding: 12px 24px; 
+            margin: 10px 5px; 
+            border: none; 
+            background: #4CAF50; 
+            color: white; 
+            cursor: pointer; 
+            border-radius: 5px; 
+            font-size: 16px;
+            display: inline-block;
+        }
+        .btn:hover { 
+            background: #388e3c; 
+        }
+        input { 
+            padding: 12px; 
+            width: 250px; 
+            margin: 10px 0; 
+            border: 2px solid #ddd;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+        #message {
+            min-height: 24px;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -22,7 +64,7 @@
             <h2>🔐 Вход в систему</h2>
             <input type="password" id="codeInput" placeholder="Введите код доступа">
             <button class="btn" onclick="login()">Войти</button>
-            <p id="message" style="color: #d32f2f; margin-top: 10px;"></p>
+            <p id="message"></p>
         </div>
         
         <div id="dashboard" style="display: none;">
@@ -49,6 +91,12 @@
         
         function showResidents() {
             alert('Список жильцов загружается...');
+        }
+        function showPayments() {
+            alert('Платежи загружаются...');
+        }
+        function showRequests() {
+            alert('Заявки загружаются...');
         }
     </script>
 </body>
