Удалён дублирующий вызов loaded внизу index.html для устранения мерцания

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <!-- Убрать мерцание: добавить класс loaded сразу при загрузке -->
     <script>
       (function() {
+        document.documentElement.classList.add('loaded');
       })();
     </script>
     
