--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,8 @@
         html[data-loaded="true"] {
             opacity: 1 !important;
         }
+body { opacity: 0; transition: opacity 0.03s; }
+html.loaded body, html[data-loaded="true"] body { opacity: 1; }
         
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -1922,16 +1924,17 @@
         window.getLoginCode = getLoginCode;
         window.getUserData = getUserData;
         window.logout = logout;
-        window.requireAuth = requireAuth;
-
-        // FIX INITIAL LOAD FLICKERING: Check auth BEFORE DOM renders
-        (function earlyAuthCheck() {
-            const sessionCode = storage.get('zd_login_code') || storage.get('userPhone');
-            if (!sessionCode) {
-                console.log('Р В Р вЂ Р РЋРЎС™Р В Р вЂ° No session - redirecting to login');
-                // Р В Р’В Р Р†Р вЂљР’ВР В Р Р‹Р Р†Р вЂљРІвЂћвЂ“Р В Р Р‹Р В РЎвЂњР В Р Р‹Р Р†Р вЂљРЎв„ўР В Р Р‹Р В РІР‚С™Р В Р Р‹Р Р†Р вЂљРІвЂћвЂ“Р В Р’В Р Р†РІР‚С›РІР‚вЂњ Р В Р Р‹Р В РІР‚С™Р В Р’В Р вЂ™Р’ВµР В Р’В Р СћРІР‚ВР В Р’В Р РЋРІР‚ВР В Р Р‹Р В РІР‚С™Р В Р’В Р вЂ™Р’ВµР В Р’В Р РЋРІР‚СњР В Р Р‹Р Р†Р вЂљРЎв„ў Р В Р’В Р Р†Р вЂљР’ВР В Р’В Р Р†Р вЂљРЎС›Р В Р’В Р Р†Р вЂљРІР‚Сњ Р В Р Р‹Р В РЎвЂњР В Р’В Р РЋРІР‚СњР В Р Р‹Р В РІР‚С™Р В Р Р‹Р Р†Р вЂљРІвЂћвЂ“Р В Р Р‹Р Р†Р вЂљРЎв„ўР В Р’В Р РЋРІР‚ВР В Р Р‹Р В Р РЏ Р В Р Р‹Р В РЎвЂњР В Р Р‹Р Р†Р вЂљРЎв„ўР В Р Р‹Р В РІР‚С™Р В Р’В Р вЂ™Р’В°Р В Р’В Р В РІР‚В¦Р В Р’В Р РЋРІР‚ВР В Р Р‹Р Р†Р вЂљР’В Р В Р Р‹Р Р†Р вЂљРІвЂћвЂ“ (Р В Р Р‹Р РЋРІР‚СљР В Р’В Р вЂ™Р’В±Р В Р’В Р РЋРІР‚ВР В Р Р‹Р В РІР‚С™Р В Р’В Р вЂ™Р’В°Р В Р’В Р вЂ™Р’ВµР В Р Р‹Р Р†Р вЂљРЎв„ў Р В Р’В Р РЋР’ВР В Р’В Р вЂ™Р’ВµР В Р Р‹Р В РІР‚С™Р В Р Р‹Р Р†Р вЂљР’В Р В Р’В Р вЂ™Р’В°Р В Р’В Р В РІР‚В¦Р В Р’В Р РЋРІР‚ВР В Р’В Р вЂ™Р’Вµ)
-                window.location.replace('login.html');
-                return;
+(function earlyAuthCheck() {
+    try {
+        if (typeof storage === "undefined") return;
+        const sessionCode = storage.get("zd_login_code") || storage.get("userPhone");
+        if (!sessionCode) {
+            window.location.replace("login.html");
+        }
+    } catch (e) {
+        console.error("Auth check error:", e);
+    }
+})();
             }
         })();
 
