Исправление кодировки: удаление BOM из HTML файлов

--- a/public/404.html
+++ b/public/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+п»їРїВ»С—Р С—Р’В»РЎвЂ”<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -12,10 +12,16 @@
     <link rel="stylesheet" href="./css/components.css">
     <link rel="stylesheet" href="./css/mobile.css">
     <meta http-equiv="refresh" content="0;url=/">
-    <title>Перенаправление...</title>
+    <title>Р В Р’В Р РЋРЎСџР В Р’В Р вЂ™Р’ВµР В Р Р‹Р В РІР‚С™Р В Р’В Р вЂ™Р’ВµР В Р’В Р В РІР‚В¦Р В Р’В Р вЂ™Р’В°Р В Р’В Р РЋРІР‚вЂќР В Р Р‹Р В РІР‚С™Р В Р’В Р вЂ™Р’В°Р В Р’В Р В РІР‚В Р В Р’В Р вЂ™Р’В»Р В Р’В Р вЂ™Р’ВµР В Р’В Р В РІР‚В¦Р В Р’В Р РЋРІР‚ВР В Р’В Р вЂ™Р’Вµ...</title>
 </head>
 <body>
     <script>window.location.href = "/";</script>
 </body>
 </html>
+
+
+
+
+
+
 
